# webrtc-sip-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: gateway.yaml  routing.yaml
src/: __init__.py  main.py
src/media/: ice_handler.py  rtp_relay.py
src/sdp/: __init__.py  codec.py  parser.py  translator.py
src/signaling/: session_manager.py  sip_client.py  ws_server.py
